--- a/main.html
+++ b/main.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>My Motivation for Becoming a Software Developer</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <h1>Why I want to become a developer?</h1>
+  <p>
+    As a software developer, I am driven by my passion for problem-solving and creating meaningful solutions. Technology has always fascinated me, and I believe that software development provides an avenue to harness its potential and make a positive impact on the world.
+  </p>
+  <p>
+    The ability to transform ideas into functional applications excites me. I find joy in the process of designing and building software, turning lines of code into tangible and useful tools. The constant learning and innovation in the field of software development keep me motivated, as there is always something new to explore and master.
+  </p>
+  <p>
+    Moreover, software development allows me to collaborate with diverse teams, combining our skills and perspectives to create something greater than what we could achieve individually. The sense of accomplishment that comes from working together to overcome challenges and deliver successful projects is truly rewarding.
+  </p>
+  <p>
+    Lastly, I am inspired by the potential for software to make a difference in people's lives. Whether it's developing applications that enhance productivity, improve communication, or address societal issues, being a software developer empowers me to contribute to the betterment of individuals and communities.
+  </p>
 </body>
-
 </html>
